# herbie

./: .gitignore  README.md  README.org  example.herbierc  index.html  index.md  pyproject.toml  requirements.txt  setup.py
.githooks/: _install  post-merge  post-rewrite
.github/workflows/: publish.yaml
docs/: theme-bigblow-local.setup  tips.org
docs/css/: email-clean-enough.css
herbie/: __init__.py  __main__.py  aherbie.py  alayouts.py  astluft.py  consumers.py  dmenu.py  gui.py  hmenu.py  layouts.py  loops.py  my_layouts.py  oab.py  producers.py  rofi.py  stluft.py  svg.py  tasks.py  term.py  test-amenu.py  util.py  version.py
scripts/: herbie-dmenu
src/herbie/: __init__.py  __main__.py  aherbie.py  astluft.py  db.py  events.py  gui.py  layouts.py  loops.py  producers.py  pubsubhub.py  rofi.py  sources.py  stluft.py  tasks.py  term.py  test-rofi-menu.py  util.py
test/: test_db.py  test_events.py  test_herbie.py  time-totag.sh
